--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -1,9 +1,28 @@
+<!--[if gt IE 8]><!-->
+<link rel="stylesheet" type="text/css"
+    href="{{ url_for('static', filename='govuk-frontend/govuk-frontend-5.4.0.min.css') }}" /><!--<![endif]-->
 
-<!--[if gt IE 8]><!--><link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='govuk-frontend/govuk-frontend-5.4.0.min.css') }}" /><!--<![endif]-->
 
-
+<!-- jsDelivr :: Sortable :: Latest (https://www.jsdelivr.com/package/npm/sortablejs) -->
+<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
 
 <script>
 
-</script>
+    function loadSortable() {
+        var available_pages = document.getElementById("available_pages");
+        var selected_pages = document.getElementById("selected_pages");
+        new Sortable(available_pages, {
+            group: 'shared', // set both lists to same group
+            animation: 150,
+            sort: false
+        });
 
+        new Sortable(selected_pages, {
+            group: 'shared',
+            animation: 150
+        });
+    };
+    
+
+    document.addEventListener("DOMContentLoaded", loadSortable);
+</script>
