--- a/app/blueprints/self_serve/templates/build_form.html
+++ b/app/blueprints/self_serve/templates/build_form.html
@@ -4,7 +4,7 @@
 <div class="govuk-width-container">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
-            <h1 class="govuk-heading-l">FSD Build a Form</h1>
+            <h1 class="govuk-heading-l">Create Application Section</h1>
 
             {{ govukInput({
             "label": {
