--- a/app/blueprints/self_serve/templates/index.html
+++ b/app/blueprints/self_serve/templates/index.html
@@ -5,7 +5,7 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-m">What do you want to do?</h1>
             <ul class="govuk-body">
-                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.build_form')}}">Build a Form</a></li>
+                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.build_form')}}">Create an Application Form Section</a></li>
             </ul>
         </div>
     </div>
