fix element removal

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
 {% block header %}
   {{ govukHeader({
     'useTudorCrown': 'yes',
-    'serviceName': 'FSD Self Service Prototype'
+    'serviceName': 'FSD Prototype'
   }) }}
 {% endblock header %}
 
