--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -15,11 +15,9 @@
         selected_form_element = document.getElementById("frm_selected_pages");
 
         // remove existing selection
-        if (selected_form_element.childElementCount > 0){
-            for(i=0;i<selected_form_element.childElementCount;i++){
-                selected_form_element.removeChild(selected_form_element.childNodes[i]);
-            }
-        }
+        while (selected_form_element.firstChild) {
+            selected_form_element.removeChild(selected_form_element.lastChild);
+          }
 
         // add new selection
         for (page of selected.children){
