--- a/app/blueprints/self_serve/templates/index.html
+++ b/app/blueprints/self_serve/templates/index.html
@@ -1,11 +1,27 @@
 {% extends "base.html" %}
+{% from "govuk_frontend_jinja/components/notification-banner/macro.html" import govukNotificationBanner %}
+
 {% block content %}
 <div class="govuk-width-container">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+            {% set html %}
+            <p class="govuk-notification-banner__body">
+            {{messages[0]}}
+            </p>
+            {% endset %}
+    
+        {{ govukNotificationBanner({
+        "html": html
+        }) }}
+    {% endif %}
+    {% endwith %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-m">What do you want to do?</h1>
             <ul class="govuk-body">
-                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.build_form')}}">Create an Application Form Section</a></li>
+                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.build_form')}}">Create an
+                        Application Form</a></li>
             </ul>
         </div>
     </div>
