--- a/app/blueprints/self_serve/templates/index.html
+++ b/app/blueprints/self_serve/templates/index.html
@@ -22,6 +22,8 @@
             <ul class="govuk-body">
                 <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.build_form')}}">Create an
                         Application Form</a></li>
+                <li hidden class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.build_section')}}">Create a Section (Group Forms)</a></li>
+           
             </ul>
         </div>
     </div>
