create page form working

--- a/app/blueprints/self_serve/templates/index.html
+++ b/app/blueprints/self_serve/templates/index.html
@@ -21,6 +21,8 @@
             <h1 class="govuk-heading-m">What do you want to do?</h1>
             <ul class="govuk-body">
                 <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.add_question')}}">Add a Question</a></li>
+                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.build_page')}}">Create a Page</a></li>
+
                 <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.build_form')}}">Create an
                         Application Form</a></li>
                 <li hidden class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.build_section')}}">Create a Section (Group Forms)</a></li>
