--- a/app/blueprints/self_serve/templates/build_section.html
+++ b/app/blueprints/self_serve/templates/build_section.html
@@ -1,54 +1,123 @@
 {% extends "base.html" %}
 
 {%- from "govuk_frontend_jinja/components/input/macro.html" import govukInput -%}
+{%- from "govuk_frontend_jinja/components/textarea/macro.html" import govukTextarea -%}
 {%- from "govuk_frontend_jinja/components/button/macro.html" import govukButton -%}
 {% block content %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-        <h1 class="govuk-heading-l">Create Application Section</h1>
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-one-half">
-                <div class="govuk-form-group">
-                    <h3 class="govuk-heading-s">
-                        Available Forms
-                    </h3>
-                    <div id="forms-hint" class="govuk-hint">
-                        Drag the forms you want for your section from the list of available forms to the list of selected
-                        forms.
-                    </div>
-                    <div id="available_forms">
-                        {% for form in available_forms%}
-                        <div class="tooltip govuk-task-list__item govuk-tag govuk-tag--blue" id="{{form.id}}">{{
-                            form.display_name }}
-                            <div class="tooltiptext">
-                                <h4 class="govuk-heading-xs">{{form.hover_info.title}}</h4>
-                                <ul>
-                                    {% for p in form.hover_info.pages %}
-                                    <li>{{p}}</li>
-                                    {% endfor %}
-                                </ul>
-        
-                            </div>
-                        </div>
-                        {% endfor %}
-                    </div>
-                </div>
+        <h1 class="govuk-heading-l">Build Section</h1>
+        <div class="govuk-form-group">
+            <fieldset class="govuk-fieldset">
+                <form method="POST" id="section_form">
+                    <select multiple hidden name="selected_pages" id="selected_pages"></select>
+                    {{ form.hidden_tag() }}
+                    {{ govukInput({
+                    "label": {
+                    "text": form.id.label ,
+                    "isPageHeading": false
+                    },
+                    "id": form.id.id,
+                    "name": form.id.name ,
+                    "value": form.id.data,
+                    "errorMessage": {"text": form.errors.get('id')[0]} if form.errors.get('id') else None
+                    }) }}
+                    {{ govukInput({
+                        "label": {
+                        "text": form.section_display_name.label ,
+                        "isPageHeading": false
+                        },
+                        "id": form.section_display_name.id,
+                        "name": form.section_display_name.name ,
+                        "value": form.section_display_name.data,
+                        "errorMessage": {"text": form.errors.get('section_display_name')[0]} if form.errors.get('section_display_name') else None
+                        }) }}
+                    {{ govukInput({
+                    "label": {
+                    "text": form.builder_display_name.label ,
+                    "isPageHeading": false
+                    },
+                    "id": form.builder_display_name.id,
+                    "name": form.builder_display_name.name ,
+                    "value": form.builder_display_name.data,
+                    "errorMessage": {"text": form.errors.get('builder_display_name')[0]} if form.errors.get('builder_display_name') else None
+                    }) }}
+                    {{ govukInput({
+                        "label": {
+                        "text": form.index.label ,
+                        "isPageHeading": false
+                        },
+                        "id": form.index.id,
+                        "name": form.index.name ,
+                        "value": form.index.data,
+                        "errorMessage": {"text": form.errors.get('index')[0]} if form.errors.get('index') else None
+                        }) }}
+                </form>
+            </fieldset>
+        </div>
+    </div>
+</div>
+
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-half">
+        <div class="govuk-form-group">
+            <h3 class="govuk-heading-s">
+                Available Forms
+            </h3>
+            <div id="questions-hint" class="govuk-hint">
+                Drag the forms you want for your section from the list of available forms to the list of selected
+                forms.
             </div>
-            <div class="govuk-grid-column-one-half">
-                <div class="govuk-form-group">
-                    <h3 class="govuk-heading-s">
-                        Selected forms
-                    </h3>
-                    <div id="selected_forms-hint" class="govuk-hint">
-                        Once you have selected the forms to include, reorder them here.
-                    </div>
-                    <div id="selected_forms">
+            <div id="available_questions">
+                {% for form in available_forms%}
+                <div class="tooltip govuk-task-list__item govuk-tag govuk-tag--blue" id="{{form.id}}">{{
+                    form.display_name }}
+                    <div class="tooltiptext">
+                        <h4 class="govuk-heading-xs">{{form.hover_info.title}}</h4>
+                        <ul>
+                            {% for q in form.hover_info.pages %}
+                            <li>{{q}}</li>
+                            {% endfor %}
+                        </ul>
+
                     </div>
                 </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    <div class="govuk-grid-column-one-half">
+        <div class="govuk-form-group">
+            <h3 class="govuk-heading-s">
+                Selected Forms
+            </h3>
+            <div id="selected_questions-hint" class="govuk-hint">
+                Once you have selected the forms to include, reorder them here.
+            </div>
+            <div id="selected_questions">
             </div>
         </div>
     </div>
 </div>
+<div class="govuk-grid-row">
+    <p>
+        {{ govukButton({
+        "text": "Save",
+        "attributes": {"onclick":"saveSection()"},
+        }) }}
+        {{ govukButton({
+        "text": "View Questions",
+        "attributes": {"onclick":"allQuestionsInSection()"},
+        "classes": "govuk-button--secondary"
+        }) }}
+    </p>
+    <p>
+
+        <a class="govuk-link" onClick="downloadJson()">Download form json</a>
+    </p>
+
+</div>
+
 <style>
     /* Tooltip container */
     .tooltip {
@@ -84,4 +153,64 @@
         visibility: visible;
     }
 </style>
-{% endblock content %}
+{% endblock %}
+
+{% block bodyEnd %}
+
+
+<script>
+    var selected_sortable;
+
+
+    function updateSelectedQuestionsInForm() {
+        selected = document.getElementById("selected_questions");
+        selected_form_element = document.getElementById("selected_pages");
+
+        // remove existing selection
+        while (selected_form_element.firstChild) {
+            selected_form_element.removeChild(selected_form_element.lastChild);
+        }
+
+        // add new selection
+        for (question of selected.children) {
+            node = document.createElement("option");
+            node.setAttribute("selected", "true")
+            node.setAttribute("value", question.id)
+            selected_form_element.appendChild(node)
+        }
+
+    }
+
+
+    function loadSortable() {
+        var available_questions = document.getElementById("available_questions");
+        var selected_questions = document.getElementById("selected_questions");
+        new Sortable(available_questions, {
+            group: 'shared', // set both lists to same group
+            animation: 150,
+            sort: false
+        });
+
+        selected_sortable = new Sortable(selected_questions, {
+            group: 'shared',
+            animation: 150,
+            onSort: function () { updateSelectedQuestionsInForm() }
+        });
+    };
+
+
+
+    function allQuestionsInSection() {
+        section_form = document.getElementById("section_form")
+        section_form.setAttribute("action", "{{url_for('self_serve_bp.view_section_questions')}}")
+        section_form.submit()
+    }
+    function saveSection() {
+        section_form = document.getElementById("section_form")
+        section_form.setAttribute("action", "{{url_for('self_serve_bp.build_section')}}")
+        section_form.submit()
+    }
+
+    document.addEventListener("DOMContentLoaded", loadSortable);
+</script>
+{% endblock bodyEnd %}
