Fs 4533 clone template (#5)
* BAU renaming to FAB

* adding is_template to list column and correctin data type for weighting

* Adding unique index on template page display_path

* fs-4533 clone component

* adding is_template to list column and correctin data type for weighting

* Adding unique index on template page display_path

* fs-4533 clone component

* fs-4533 clone page and components

* adding is_template to list column and correctin data type for weighting

* Adding unique index on template page display_path

* fs-4533 clone component

* fs-4533 clone page and components

* Bau add utils (#6)

* BAU updating to use config class in utils

* remove warning

* BAU enabling db test fixtures

* review comments

* adding is_template to list column and correctin data type for weighting

* Adding unique index on template page display_path

* fs-4533 clone component

* fs-4533 clone page and components

* Adding unique index on template page display_path

* Adding unique index on template page display_path

* fs-4533 clone page and components

* FS-4528: Build and Deploy to AWS Environments. (#7)

* Added new services and the code

* edited the manifest file

* edited

* edited the files

* edited the flag

* fix unit tests

* default db url

* added the latest image

---------

Co-authored-by: Sarah Sloan <sarah.sloan@levellingup.gov.uk>

* updating tests to use utils fixtures

* separate out unit test and ui test data

* adding is_template to list column and correctin data type for weighting

* Adding unique index on template page display_path

* fs-4533 clone component

* fs-4533 clone page and components

* Adding unique index on template page display_path

* Adding unique index on template page display_path

* fs-4533 clone page and components

* Adding unique index on template page display_path

* fs-4533 clone page and components

* Adding unique index on template pa

--- a/app/blueprints/fund_builder/templates/view_application_config.html
+++ b/app/blueprints/fund_builder/templates/view_application_config.html
@@ -19,9 +19,9 @@
     {% for section in round.sections %}
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
-                <h3 class="govuk-heading-s">{{ section.index }}. {{ section.name_in_apply["en"] }}</h3>
+                <h3 class="govuk-heading-s">{{ section.index }}. {{ section.name_in_apply_json["en"] }}</h3>
                 {% for form in section.forms %}
-                    <h4 class="govuk-heading-s">Form {{ form.section_index }}. {{ form.name_in_apply["en"] }}</h4>
+                    <h4 class="govuk-heading-s">Form {{ form.section_index }}. {{ form.name_in_apply_json["en"] }}</h4>
                     {{ govukButton({
                         "text": "Preview Form",
                         "href": url_for("build_fund_bp.preview_form", form_id=form.form_id),
@@ -36,7 +36,7 @@
                     }}
                     {% for page in form.pages %}
                         <div class="section_page">
-                            <span class="govuk-body">{{ page.form_index }}. {{ page.name_in_apply["en"] }}</span>
+                            <span class="govuk-body">{{ page.form_index }}. {{ page.name_in_apply_json["en"] }}</span>
                             <ul class="govuk-list--bullet">
                                 {% for component in page.components %}
                                     {% set list_details %}
