add CRUD for component, page, form and section config (#13)

--- a/app/blueprints/self_serve/templates/create_form.html
+++ b/app/blueprints/self_serve/templates/create_form.html
@@ -208,7 +208,7 @@
     }
     function saveForm() {
         section_form = document.getElementById("form_form")
-        section_form.setAttribute("action", "{{url_for('self_serve_bp.build_form')}}")
+        section_form.setAttribute("action", "{{url_for('self_serve_bp.create_form')}}")
         section_form.submit()
     }
 
