--- a/app/blueprints/self_serve/templates/index.html
+++ b/app/blueprints/self_serve/templates/index.html
@@ -19,30 +19,23 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-m">What do you want to do?</h1>
-            <h2 class="govuk-heading-s">Template Setup</h2>
+            <h2 class="govuk-heading-s">Template Management</h2>
             <ul class="govuk-body">
-                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.question')}}">Add a
-                        Question</a></li>
-                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.question', template='edit') }}">Edit/Delete a
-                    Question</a></li>
-                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.page')}}">Create a
-                        Page</a></li>
-                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.page', template='edit') }}">Edit/Delete a
-                    Page</a></li>
-                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.form')}}">Create an
+                <li class="govuk-body"><a class="govuk-link" href="/">Edit a
+                    template Question (text only)</a></li>
+                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.form')}}">Create a template
                         Application Form</a></li>
-                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.form', template='edit') }}">Edit/Delete an
-                    Application Form</a></li>
                 <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.section')}}">Create a
-                        Section (Group Forms)</a></li>
-                <li class="govuk-body"><a class="govuk-link" href="{{ url_for('self_serve_bp.section', template='edit') }}">Edit/Delete a
-                    Section</a></li>
+                        template Section (Form group)</a></li>
+                <li class="govuk-body"><a class="govuk-link" href="/">Edit a
+                    template Section</a></li>
             </ul>
-            <h2 class="govuk-heading-s">Fund Metadata</h2>
+            <h2 class="govuk-heading-s">Fund Configuration</h2>
             <ul class="govuk-body">
                 <li class="govuk-body"><a class="govuk-link" href="{{url_for('build_fund_bp.fund')}}">Add a Fund</a></li>
                 <li class="govuk-body"><a class="govuk-link" href="{{url_for('build_fund_bp.round')}}">Add a Round</a></li>
-                <li class="govuk-body"><a class="govuk-link" href="{{url_for('build_fund_bp.view_fund')}}">View Fund and Round Config</a></li>
+                <li class="govuk-body"><a class="govuk-link" href="/">Configure a Round Application</a></li>
+                <li class="govuk-body"><a class="govuk-link" href="{{url_for('build_fund_bp.view_fund')}}">View Fund Config</a></li>
             </ul>
         </div>
     </div>
